# Aura-9

./: .gitignore  LICENSE  README.md  Readme_V2.2.md  Readme_V2.3.md  Readme_V2.4.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
config/: aura9.config.yaml  red_zones.yaml  settings.yaml
docker/: docker-compose.yaml
scripts/: setup.sh  startup.sh
secrets/: mcp-credentials.yaml.template
skills/: interface.py
src/agent/: bootstrap.py
src/aura9/: __init__.py
src/aura9/cli/: __init__.py  main.py
src/aura9/core/: __init__.py  config.py  logging.py  model.py  session.py  tais.py
src/aura9/memory/: __init__.py  falkor_l3.py  qdrant_l2.py  redis_l1.py  router.py
src/aura9/observability/: __init__.py  health.py  metrics.py
src/aura9/orchestration/: __init__.py  asd.py
src/aura9/security/: __init__.py  sanitizer.py  watchdog.py
src/aura9/tools/: __init__.py
src/cli/: commands.py
src/config/: loader.py  schema.py
src/core/: confidence.py  context_budget.py  ollama_client.py  preprocessor.py  prompts.py  reasoning.py  tais.py
src/ipc/: channels.py  publisher.py  subscriber.py
src/memory/: isec.py  l1_redis.py  l2_qdrant.py  l3_falkordb.py  memory_router.py
src/migrations/: runner.py  v001_init_schema.cypher
src/observability/: diagnostics.py  health.py  logging_setup.py  metrics.py
src/orchestration/: asd.py  continuity.py  dag_scheduler.py  human_gate.py  session.py
src/security/: audit.py  auth.py  financial_gate.py  pii_scrubber.py  red_zone.py  sanitizer.py  watchdog.py
src/skill_forge/: forge.py  registry.py  versioning.py
src/tools/: base.py  mcp_gateway.py  memory_write.py  python_exec.py  qdrant_search.py  vla_bridge.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_l1_redis.py  test_l2_qdrant.py
tests/unit/: test_asd.py  test_confidence.py  test_config.py  test_context_budget.py  test_dag_scheduler.py  test_memory_router.py  test_pii_scrubber.py  test_preprocessor.py  test_router.py  test_sanitizer.py  test_session.py  test_tais.py
