[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aura-9"
version = "2.4.0"
description = "Aura-9: Autonomous Reasoning Agent — occupational intelligence system powered by Qwen 3.5 9B via Ollama"
readme = "Readme_V2.4.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Aura-9 Project"},
]
keywords = ["ai", "agent", "autonomous", "reasoning", "ollama", "qwen"]

dependencies = [
    # Core async + HTTP
    "httpx>=0.27.0,<1.0",

    # Redis (L1 + ASD)
    "redis>=5.0,<6.0",

    # Qdrant (L2 vector store)
    "qdrant-client>=1.12.0,<2.0",

    # FalkorDB (L3 graph)
    "falkordb>=1.0.0,<2.0",

    # GPU monitoring (TAIS)
    "pynvml>=11.5.0,<13.0",

    # Configuration + validation
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",

    # Logging
    "loguru>=0.7,<1.0",

    # Metrics
    "prometheus-client>=0.20,<1.0",

    # CLI
    "click>=8.1,<9.0",

    # Utilities
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
# Optional NER for entity extraction (Section 3.5.2)
ner = [
    "spacy>=3.7,<4.0",
]
# Development and testing
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "fakeredis>=2.21,<3.0",
    "ruff>=0.4,<1.0",
]

[project.scripts]
aura9 = "src.cli.commands:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (no infrastructure required)",
    "integration: Integration tests (mock infrastructure)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # Allow assert in tests
